load("@build_stack_scala_gazelle//rules:java_index.bzl", "java_index")

java_index(
    name = "java_index",
    jars = [
        "@maven//:com_google_code_gson_gson",
    ],
    out_json = "java_index.json",
    out_proto = "java_index.pb",
    platform_jars = ["@bazel_tools//tools/jdk:platformclasspath"],
)
